Push for Merge of darkid's code